--- a/styles/c7_main.css
+++ b/styles/c7_main.css
@@ -49,6 +49,7 @@ header img {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	position: relative;
 }
 #nav_menu ul li {
 	float: left;
@@ -65,6 +66,22 @@ header img {
 }
 #nav_menu li.current {
 	color:yellow
+}
+#nav_menu ul ul li {
+	float: none
+}
+#nav_menu ul li:hover > ul {
+	display: block;
+}
+#nav_menu > ul::after {
+	content: '';
+	clear: both;
+	display: block;
+}
+/* Style rule for submenu */
+.submenu {
+	display: none;
+	position: absolute;
 }
 /* the styles for the section */
 section {
