--- a/styles/c7_main.css
+++ b/styles/c7_main.css
@@ -45,6 +45,7 @@ header img {
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
 }
+/* Nav Menu */
 #nav_menu ul{
 	list-style-type: none;
 	margin: 0;
