--- a/styles/c7_main.css
+++ b/styles/c7_main.css
@@ -46,44 +46,55 @@ header img {
 	text-shadow: 2px 2px 2px #800000;
 }
 /* Nav Menu */
-#nav_menu ul{
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	position: relative;
+#nav_menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
 }
 #nav_menu ul li {
-	float: left;
+    float: left;
 }
-#nav_menu ul li a{
-	display: block;
-	width: 160px;
-	text-align: center;
-	padding: 1em 0;
-	text-decoration: none;
-	background-color: #800000;
-	color: white;
-	font-weight: bold;
+#nav_menu ul li a {
+    display: block;
+    width: 160px;
+    text-align: center;
+    padding: 1em 0;
+    text-decoration: none;
+    background-color: #800000;
+    color: white;
+    font-weight: bold;
 }
 #nav_menu li.current {
-	color:yellow
+    color: yellow
 }
-#nav_menu ul ul li {
-	float: none
+#nav_menu ul ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
 }
-#nav_menu ul li:hover .submenu {
-	display: block;
+#nav_menu ul li:hover > ul {
+    display: block;
 }
 #nav_menu > ul::after {
-	content: '';
-	clear: both;
-	display: block;
+    content: '';
+    clear: both;
+    display: block;
 }
 /* Style rule for submenu */
 .submenu {
-	display: none;
-	position: absolute;
+    position: absolute;
+    background-color: #800000;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: none;
 }
+#nav_menu ul li:hover .submenu {
+    display: block;
+}
+
 /* the styles for the section */
 section {
 	width: 525px;
